<resources>
    <string name="app_name">Ramvel Traders</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="user_account">User Account</string>
    <string name="setting">Settings</string>
    <string name="about_us">About Us</string>
    <string name="icon_description">Navigation Drawer List Icons</string>
    <string name="profile_image">User profile image</string>
    <string name="user_name">Androhub</string>
    <string name="email">androhub@gmail.com</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="placeholder_text">Placeholder</string>
    <string-array name="list_items_categories">
        <item>Ice Cream Retail</item>
        <item>Bakery Retail</item>
        <item>Beverages Retail</item>
        <item>Ice Cream Wholesale</item>
        <item>Bakery Wholesale</item>
        <item>Beverages Wholesale</item>
    </string-array>
    <string-array name="list_sub_item">
        <item>Offer Zone</item>
        <item>Notifications</item>
    </string-array>
    <string-array name="list_item_account">
        <item>My Cart</item>
        <item>My Wish List</item>
        <item>My Orders</item>
        <item>My Account</item>
        <item>My Product Reviews</item>
    </string-array>
    <string-array name="list_item_help">
        <item>Gift Card</item>
        <item>Stores</item>
        <item>Help Center</item>
        <item>Terms of Service</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="empty_email">Email is empty</string>
    <string name="empty_password">Password is empty</string>
    <string name="general_error">Error Occurred</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="empty_first_name">First Name is Empty</string>
    <string name="empty_last_name">Last Name is empty</string>
    <string name="empty_city">City is empty</string>
    <string name="empty_post_code">Pin code is empty</string>
    <string name="empty_telephone">Phone number is empty</string>
    <string name="empty_country">Country is empty</string>
    <string name="empty_state">State is empty</string>
    <string name="empty_street">Street is empty</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <string name="Rs">\u20B9</string>
    <string name="btn_txt_cart">Add to Cart</string>
    <string name="btn_txt_wish_list">Add to Wish List</string>
    <string name="short_description">Short Description</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="related_product">Related Products</string>
    <string name="hint_quantity">Quantity</string>
    <string name="symbol_remove_item">-</string>
    <string name="symbol_add_item">+</string>
    <string name="default_item_value">1</string>
    <string name="checkout">Checkout</string>
    <string name="cart_default_value">0</string>

    <!-- billing address -->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_arrow">Collapse/Expand arrow</string>
    <string name="btn_place_order">Place Order</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_change">Change</string>
    <string name="lbl_shipping_address">Shipping Address</string>
</resources>
