<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:cardview="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/product_name"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:id="@+id/product_img_large"
            android:layout_width="wrap_content"
            android:scaleType="fitXY"
            android:contentDescription="@string/placeholder_text"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/price"
                android:textSize="18sp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/price"
                android:textSize="15sp"
                android:textColor="@color/colorGreen"
                android:fontFamily="sans-serif"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:text="@string/btn_txt_cart"
                android:id="@+id/my_cart_btn"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:background="@drawable/btn_background"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:id="@+id/wish_btn"
                android:text="@string/btn_txt_wish_list"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:background="@drawable/btn_background"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                cardview:cardCornerRadius="4dp"
                cardview:cardElevation="5dp"
                cardview:contentPadding="5dp"
                cardview:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="2dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/short_description"
                            android:paddingBottom="2dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_height="wrap_content" />

                        <View
                            android:layout_width="match_parent"
                            android:background="@color/black"
                            android:layout_height="0.5dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/short_description"
                            android:paddingTop="5dp"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_marginLeft="2dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/description"
                            android:paddingBottom="2dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_height="wrap_content" />

                        <View
                            android:layout_width="match_parent"
                            android:background="@color/black"
                            android:layout_height="0.5dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/description"
                            android:paddingTop="5dp"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:id="@+id/recycler_view"
                android:layout_height="match_parent" />

        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>
