<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:weightSum="4"
    android:background="@drawable/border_bottom_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="3.7"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/lbl_shipping_address"
                android:background="@color/colorGreen"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_height="?android:attr/actionBarSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="match_parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_name"
                    android:ems="15"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:autofillHints="@string/hint_first_name"
                    android:hint="@string/hint_first_name"
                    android:layout_margin="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/last_name"
                    android:ems="15"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:hint="@string/hint_last_name"
                    android:autofillHints="@string/hint_last_name"
                    android:textColorHint="@color/grey"
                    android:layout_margin="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/phone_number"
                    android:ems="15"
                    android:inputType="number"
                    android:maxLength="15"
                    android:textSize="15dp"
                    android:hint=" Phone Number"
                    android:textColorHint="@color/grey"
                    android:layout_margin="5dp"  />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/email"
                    android:ems="15"
                    android:inputType="text"
                    android:maxLength="150"
                    android:textSize="15dp"
                    android:hint="Email"
                    android:textColorHint="@color/grey"
                    android:layout_margin="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/street_address"
                    android:ems="15"
                    android:gravity="left|top"
                    android:inputType="text"
                    android:maxLength="15"
                    android:textSize="15dp"
                    android:hint=" Street Address"
                    android:textColorHint="@color/grey"
                    android:layout_margin="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/city"
                    android:ems="15"
                    android:inputType="text"
                    android:maxLength="15"
                    android:textSize="15dp"
                    android:hint=" City"
                    android:textColorHint="@color/grey"
                    android:layout_margin="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/state"
                    android:ems="15"
                    android:inputType="text"
                    android:maxLength="15"
                    android:textSize="15dp"
                    android:hint=" State/Province"
                    android:textColorHint="@color/grey"
                    android:layout_margin="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/postal_code"
                    android:ems="15"
                    android:inputType="number"
                    android:maxLength="15"
                    android:textSize="15dp"
                    android:hint=" Zip/Postal Code"
                    android:textColorHint="@color/grey"
                    android:layout_margin="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/country"
                    android:ems="15"
                    android:inputType="text"
                    android:maxLength="15"
                    android:textSize="15dp"
                    android:hint=" Country"
                    android:textColorHint="@color/grey"
                    android:layout_margin="5dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.3"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="0dp">

        <Button
            android:id="@+id/orderButton"
            android:layout_width="match_parent"
            android:text="@string/btn_continue"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/colorGreen"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>